// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When an enum is defined in the Prisma schema it can be projected into the GraphQL API 1`] = `
"
enum Foo {
  a
}
"
`;

exports[`When an enum is defined with documentation in the Prisma schema it can be projected into the GraphQL API with that documentation 1`] = `
"
\\"\\"\\"Some documentation\\"\\"\\"
enum Foo {
  a
}
"
`;

exports[`When an enum with multiple members is defined in the Prisma schema it and all its members can be projected into the GraphQL API 1`] = `
"
enum Foo {
  a
  b
  c
}
"
`;
